fixup: Align tiprack render more closely to PD

--- a/labware-library/src/components/LabwareRender/styles.css
+++ b/labware-library/src/components/LabwareRender/styles.css
@@ -14,6 +14,7 @@
 
 .tiprack_outline {
   fill: var(--c-plate-bg);
+  stroke: var(--c-charcoal);
 }
 
 .well_group {
